# quadrupedrobot

./: README.md
src/genesys/: CMakeLists.txt  package.xml
src/genesys/launch/: display.launch
src/genesys/rviz/: default.rviz
src/genesys/urdf/: body.xacro  leg.urdf.xacro
src/urdfgenesyssw/: CMakeLists.txt  package.xml
src/urdfgenesyssw/config/: joints.yaml
src/urdfgenesyssw/launch/: display.launch  gazebo.launch  gazebo1.launch
src/urdfgenesyssw/meshes/: BL.STL  LFC.STL  LHC.STL  LHT.STL  RFC.STL  RFT.STL  RHC.STL  RHT.STL
src/urdfgenesyssw/rviz/: urdf.rviz
src/urdfgenesyssw/urdf/: urd.urdf  urdfgenesyssw.csv  urdfgenesyssw.gazebo  urdfgenesyssw.xacro
src/urdfgenesyssw/worlds/: playground.world
